--- a/School/WebApplication1/StoreManagement.csproj
+++ b/School/WebApplication1/StoreManagement.csproj
@@ -5,27 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Views\Test\**" />
-    <Compile Remove="Views\TypeCotroller\**" />
-    <Content Remove="Views\Test\**" />
-    <Content Remove="Views\TypeCotroller\**" />
-    <EmbeddedResource Remove="Views\Test\**" />
-    <EmbeddedResource Remove="Views\TypeCotroller\**" />
-    <None Remove="Views\Test\**" />
-    <None Remove="Views\TypeCotroller\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Remove="Controllers\CustomerController.cs" />
     <Compile Remove="Controllers\TestController.cs" />
     <Compile Remove="IServices\IDelete.cs" />
     <Compile Remove="Services\Class.cs" />
     <Compile Remove="Services\DeleteService.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Remove="Views\Home\Privacy.cshtml" />
-    <Content Remove="Views\Home\View.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,6 +25,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
