--- a/School/WebApplication1/StoreManagement.csproj
+++ b/School/WebApplication1/StoreManagement.csproj
@@ -86,4 +86,8 @@
     <None Include="wwwroot\assets\scss\paper-dashboard\_variables.scss" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\Respones\" />
+  </ItemGroup>
+
 </Project>
