--- a/School/WebApplication1/appsettings.json
+++ b/School/WebApplication1/appsettings.json
@@ -9,11 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //BEGIN - Development
-    "App-Conn": "Server=DESKTOP-RBNM78Q\\SQLEXPRESS;Database=storemanagement;User=sa;Password=22082003"
+    //"App-Conn": "Server=DESKTOP-RBNM78Q\\SQLEXPRESS;Database=storemanagement;User=sa;Password=22082003"
     //END
 
     //// BEGIN - LONGDT
-    //"App-Conn": "Server=DESKTOP-122EK6U\\YONG;Database=storemanagement;User=sa;Password=Matkh@u123"
+    "App-Conn": "Server=YONG;Database=storemanagement;User=sa;Password=Matkh@u123"
     //// END
   }
 }
